--- a/investmentFunds.infrastructure.api/appsettings.json
+++ b/investmentFunds.infrastructure.api/appsettings.json
@@ -6,9 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MongoDb": "mongodb://localhost:27017"
-  },
+  "MongoDbConnectionString": "mongodb+srv://jaiderosorio:geObj4OcD3Yqsjfo@cluster0.at74e.mongodb.net/",
   "DatabaseSettings": {
     "DatabaseName": "InvestmentFund",
     "Collections": {
