--- a/template.yml
+++ b/template.yml
@@ -1,36 +1,88 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Resources:
-  MyCluster:
-    Type: AWS::ECS::Cluster
+  # Definir el grupo de seguridad para ECS
+  ECSSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
     Properties:
-      ClusterName: my-cluster
+      GroupDescription: 'Allow HTTP traffic to ECS tasks'
+      VpcId: 'vpc-0ac222c69e6faa320' # Reemplaza con el ID de tu VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: '80'
+          ToPort: '80'
+          CidrIp: '0.0.0.0/0'
 
-  MyApiTaskDefinition:
+  # Definir el grupo de registros para CloudWatch Logs
+  MyLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: '/ecs/my-api-logs'
+      RetentionInDays: 7 # Opcional: Ajusta el tiempo de retención según tus necesidades
+
+  # Definir la definición de la tarea ECS
+  MyTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
-      Family: myapi-task
-      NetworkMode: bridge
+      Family: 'my-task-definition'
+      NetworkMode: 'awsvpc'
       RequiresCompatibilities:
-        - EC2
+        - 'FARGATE'
+      Cpu: '256'
+      Memory: '512'
+      ExecutionRoleArn: !Ref ECSExecutionRole
       ContainerDefinitions:
-        - Name: myapi
-          Image: 058264167073.dkr.ecr.us-east-1.amazonaws.com/investment-funds-api:latest
-          Essential: true
+        - Name: 'my-api-container'
+          Image: 'public.ecr.aws/f7k9x4c5/investmentfunds-api:latest'
           PortMappings:
             - ContainerPort: 80
-              HostPort: 80
-          Memory: 512
-          Cpu: 256
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group: !Ref MyLogGroup
+              awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: 'ecs'
 
-  MyApiService:
+  # Definir el servicio ECS
+  MyService:
     Type: AWS::ECS::Service
     Properties:
-      Cluster: !Ref MyCluster
+      Cluster: !Ref ECSCluster
       DesiredCount: 1
-      LaunchType: EC2
-      TaskDefinition: !Ref MyApiTaskDefinition
+      LaunchType: 'FARGATE'
+      TaskDefinition: !Ref MyTaskDefinition
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          Subnets:
+            - 'subnet-0705e061bb0f1447d' # Reemplaza con tu Subnet ID
+          SecurityGroups:
+            - !Ref ECSSecurityGroup
+          AssignPublicIp: ENABLED  # Asigna una IP pública a las tareas ECS
+
+  # Definir el rol de ejecución para la tarea ECS
+  ECSExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+
+  # Definir el clúster ECS
+  ECSCluster:
+    Type: AWS::ECS::Cluster
 
 Outputs:
-  ApiServiceURL:
-    Description: "URL of the API Service"
-    Value: !Sub "http://${MyApiService.Arn}"
+  ECSClusterName:
+    Description: "Name of the ECS Cluster"
+    Value: !Ref ECSCluster
+  ECSServiceName:
+    Description: "Name of the ECS Service"
+    Value: !Ref MyService
+  ECSTaskDefinitionArn:
+    Description: "ARN of the ECS Task Definition"
+    Value: !Ref MyTaskDefinition
