cuadrar archivos de despliegue

--- a/investmentFunds.infrastructure.api/appsettings.Development.json
+++ b/investmentFunds.infrastructure.api/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDb": "mongodb+srv://jaiderosorio:geObj4OcD3Yqsjfo@cluster0.at74e.mongodb.net/"
+  },
+  "DatabaseSettings": {
+    "DatabaseName": "InvestmentFund",
+    "Collections": {
+      "InvestmentFund": "investmentFund",
+      "Investor": "investor",
+      "Subscription": "subscription",
+      "Transaction": "transaction"
+    }
   }
 }
